Implemented category merging

--- a/Frontend/components/accordion/accordion.html
+++ b/Frontend/components/accordion/accordion.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="../../css/material-icons-font.css" type="text/css" />
 
     <!-- Specific style -->
-    <link rel="stylesheet" href="../../css/components/modal.css" type="text/css" />
-    <link rel="stylesheet" href="../../css/components/primary-button.css" type="text/css" />
     <link rel="stylesheet" href="../../css/components/accordion.css" type="text/css" />
 
     <!--[if lt IE 9]>
@@ -44,29 +42,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
                         <span class="category-name">1a</span>
                         (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -124,29 +104,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">2</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">3</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -180,29 +142,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">3</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">8</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -276,29 +220,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">4</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">4</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -340,29 +266,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">5b</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">7</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -428,29 +336,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">31er</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">2</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -480,29 +370,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">7</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">8</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -576,29 +448,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">8</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">8</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -672,29 +526,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">9</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">3</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -728,29 +564,11 @@
             <div class="accordion-bar">
                 <div class="bar-header clearfix">
                     <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
+                    <h4 class="heading">
                         Kategorie:
-                        <span class="category-name">1a</span>
-                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                        <span class="category-name">10</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">2</span>)
                     </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
                 </div>
                 <div class="bar-content">
                     <table>
@@ -770,6 +588,7 @@
                             <td class="graduation">1.Kyu</td>
                             <td class="club">SV Tora</td>
                         </tr>
+                    </table>
                 </div>
             </div>
         </div>
