--- a/Frontend/css/components/carousel.css
+++ b/Frontend/css/components/carousel.css
@@ -2,10 +2,6 @@
   width: 15rem;
   margin: 0 auto;
   height: 20rem;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   transition: 0.5s ease;
   z-index: 10;
   perspective: 1000px;
@@ -31,7 +27,7 @@
   left: 0;
   box-shadow: 0 0 15px 3px black;
   z-index: 2;
-  background: radial-gradient(circle at 0% 100%, rgba(48, 48, 48, 1) 60%, rgba(61, 118, 225, 0.75));
+  background: radial-gradient(circle at 0% 100%, rgba(48, 48, 48, 1) 60%, rgba(61, 118, 225, 0.9));
   font-size: 1rem;
   opacity: 1;
   display: inline-block;
@@ -41,12 +37,7 @@
 .carousel-container .page.inactive {
   opacity: 0.5;
   color: #828282;
-}
-
-.carousel-container .page.inactive a {
-  pointer-events: none;
-  cursor: default;
-  text-decoration: none;
+  background: radial-gradient(circle at 0% 100%, rgba(48, 48, 48, 1) 85%, rgba(61, 118, 225, 0.9));
 }
 
 .page h3 {
@@ -61,7 +52,7 @@
   font-weight: normal;
 }
 
-.secondary-button {
+.carousel-container .secondary-button {
   position: absolute;
   bottom: 1em;
   left: 50%;
