--- a/Frontend/css/components/modal.css
+++ b/Frontend/css/components/modal.css
@@ -87,6 +87,7 @@ a.primary-button.close-modal i {
   padding: 0.5em 1em 1.5em;
   overflow-y: auto;
   max-height: 13em;
+  word-wrap: break-word;
 }
 
 .mw-content p {
